# lab6

./: CMakeLists.txt
.github/workflows/: CI.yml
include/: header.hpp  picosha2.h
sources/: CPP.cpp  source.cpp
tests/: test.cpp
